# agent-term-status

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/ats-cli/: Cargo.toml  build.rs
crates/ats-cli/src/: daemon_commands.rs  doctor.rs  event_prototype.rs  hook_commands.rs  main.rs  query_commands.rs  socket_client.rs  standalone_render.rs  theme_commands.rs
crates/ats-cli/tests/: e2e_tests.rs  event_prototype.rs  tmux_driver.rs  version.rs
crates/ats-config/: Cargo.toml
crates/ats-config/src/: atomic.rs  bundled_themes.rs  config.rs  lib.rs  paths.rs  theme.rs
crates/ats-core/: Cargo.toml
crates/ats-core/src/: activity.rs  event.rs  id.rs  lib.rs  session.rs  state.rs
crates/ats-core/tests/: activity_label_sanitization.rs  id_and_timestamp.rs  schema_validation.rs  serde_roundtrip.rs
crates/ats-daemon/: Cargo.toml
crates/ats-daemon/src/: broker.rs  framing.rs  lib.rs  logging.rs  main.rs  paths.rs  pidfile.rs  server.rs
crates/ats-daemon/tests/: harness.rs  socket_server.rs
crates/ats-daemon/tests/common/: mod.rs
crates/ats-provider/: Cargo.toml
crates/ats-provider-claude/: Cargo.toml
crates/ats-provider-claude/src/: adapter.rs  install.rs  lib.rs  risk.rs
crates/ats-provider-claude/tests/: fixture_corpus.rs  parser_integration.rs
crates/ats-provider/src/: lib.rs
crates/ats-provider/tests/: trait_shape.rs
crates/ats-renderer/: Cargo.toml
crates/ats-renderer-iterm2/: Cargo.toml
crates/ats-renderer-iterm2/src/: lib.rs
crates/ats-renderer-notification/: Cargo.toml
crates/ats-renderer-notification/src/: lib.rs
crates/ats-renderer-tmux/: Cargo.toml
crates/ats-renderer-tmux/src/: lib.rs
crates/ats-renderer/src/: lib.rs
crates/ats-renderer/tests/: trait_shape.rs
crates/ats-rendering/: Cargo.toml
crates/ats-rendering/src/: lib.rs
crates/ats-state-engine/: Cargo.toml
crates/ats-state-engine/src/: engine.rs  lib.rs  machine.rs  priority.rs
crates/ats-state-engine/tests/: proptest_invariants.rs  state_transitions.rs
docs/: IDEA.md  SPEC.md  TASK_PLAN.md  WORKFLOW.md  acceptance-verification.md  standalone-mode.md  threat-model.md
docs/spikes/: README.md  iterm2-osc.md  macos-notifications.md  osc-tty-ownership.md  tmux-invocation.md  tmux-pane-safety.md
schemas/: event-v1.schema.json
scripts/: install.sh
tests/common/: mod.rs
tests/fixtures/claude/: README.md  sanitize-check.sh
tests/fixtures/claude/2.0.77/Notification/: idle-prompt.synthetic.json  permission-request.synthetic.json
tests/fixtures/claude/2.0.77/PostToolUse/: tool-success-0.json
tests/fixtures/claude/2.0.77/PostToolUseFailure/: tool-failure-0.json
tests/fixtures/claude/2.0.77/PreToolUse/: tool-failure-0.json  tool-success-0.json
tests/fixtures/claude/2.0.77/SessionEnd/: capture-0.json  capture-1.json  capture-2.json
tests/fixtures/claude/2.0.77/SessionStart/: capture-0.json  capture-1.json  capture-2.json
tests/fixtures/claude/2.0.77/Stop/: capture-0.json  capture-1.json  capture-2.json
tests/fixtures/claude/2.0.77/UserPromptSubmit/: capture-0.json  capture-1.json  capture-2.json
tests/fixtures/claude/2.1.214/Notification/: idle-prompt.synthetic.json  missing-field.synthetic.json  permission-request.synthetic.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/PostToolUse/: missing-field.synthetic.json  tool-success-0.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/PostToolUseFailure/: missing-field.synthetic.json  tool-failure-0.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/PreToolUse/: missing-field.synthetic.json  permission-denied-0.json  tool-failure-0.json  tool-success-0.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/SessionEnd/: missing-field.synthetic.json  no-tool-0.json  permission-denied-0.json  tool-failure-0.json  tool-success-0.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/SessionStart/: missing-field.synthetic.json  no-tool-0.json  permission-denied-0.json  tool-failure-0.json  tool-success-0.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/Stop/: missing-field.synthetic.json  no-tool-0.json  permission-denied-0.json  tool-failure-0.json  tool-success-0.json  unknown-field.synthetic.json
tests/fixtures/claude/2.1.214/UserPromptSubmit/: missing-field.synthetic.json  no-tool-0.json  permission-denied-0.json  tool-failure-0.json  tool-success-0.json  unknown-field.synthetic.json
themes/: color-safe.yaml  default.yaml  high-contrast.yaml  low-distraction.yaml  monochrome-symbols.yaml
