[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/takurot/agent-term-status"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
strip = true
