[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/takurot/agent-term-status"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
jsonschema = { version = "0.26", default-features = false }
async-trait = "0.1"
tokio = { version = "1", default-features = false }
serde_yaml = "0.9"
dirs = "6"
tempfile = "3"
thiserror = "2"

[profile.release]
lto = "thin"
strip = true
