[package]
name = "ats-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "ats"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
ats-core = { path = "../ats-core" }
serde_json = { workspace = true }
