[package]
name = "ats-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[[bin]]
name = "ats"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ats-core = { path = "../ats-core" }
ats-daemon = { path = "../ats-daemon" }
ats-config = { path = "../ats-config" }
ats-renderer = { path = "../ats-renderer" }
ats-renderer-tmux = { path = "../ats-renderer-tmux" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "sync"] }
serde_json = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
