[package]
name = "ats-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ats_daemon"
path = "src/lib.rs"

[[bin]]
name = "ats-daemon"
path = "src/main.rs"

[dependencies]
dirs = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "signal",
] }

[dev-dependencies]
tempfile = { workspace = true }
