[package]
name = "ats-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ats_daemon"
path = "src/lib.rs"

[[bin]]
name = "ats-daemon"
path = "src/main.rs"

[dependencies]
ats-core = { path = "../ats-core" }
ats-state-engine = { path = "../ats-state-engine" }
ats-rendering = { path = "../ats-rendering" }
ats-renderer = { path = "../ats-renderer" }
ats-config = { path = "../ats-config" }
chrono = { workspace = true }
dirs = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "sync",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }
