[package]
name = "ats-renderer-iterm2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ats-core = { path = "../ats-core" }
ats-renderer = { path = "../ats-renderer" }
ats-config = { path = "../ats-config" }
async-trait = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
