[package]
name = "ats-renderer-notification"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ats-core = { path = "../ats-core" }
ats-renderer = { path = "../ats-renderer" }
ats-config = { path = "../ats-config" }
async-trait = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
