[package]
name = "ats-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ats-core = { path = "../ats-core" }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
