[package]
name = "ats-rendering"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ats-core = { path = "../ats-core" }
ats-renderer = { path = "../ats-renderer" }
ats-config = { path = "../ats-config" }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time"] }
