[package]
name = "ats-state-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ats-core = { path = "../ats-core" }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
